# dataset_preproc

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  add_samples.py  dev.sh  entrypoint.sh  runtime.sh  upload.py
.github/workflows/: ci-pre-commit.yml  reusable-update-pre-commit.yml
config/: av.yaml
keys/: dataset_keys.env
scripts/: add_3d_samples.py  add_samples.py  ego_setup.py  generate_ego_trajectory.py  img_setup.py  pcd_setup.py  pyproject.toml  s3_client.py  upload.py  utils.py
scripts/labelling_preproc/: add_3d_sample.py  add_3d_samples.py  add_segmentsai_sample.py  generate_ego_trajectory.py  upload.py  upload_data.py
scripts/labelling_preproc/common/: camera_calibration_parser.py  img_setup.py  pcd_setup.py  sample_formats.py  sensor_frame_ceator.py  transform_tree.py  utils.py
